ecmascript/parser/tests/typescript-errors/tsc/externalModules/importNonStringLiteral/input.ts.stderr
error: Unexpected token `x`. Expected a string literal
 --> $DIR/tests/typescript-errors/tsc/externalModules/importNonStringLiteral/input.ts:4:22
  |
4 | import foo = require(x); // invalid
  |                      ^

